Add DATABASE_URL for local Postgres setup

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ BOT_TOKEN=YOUR_TOKEN
 ADMIN_IDS=123456789
 DB_PATH=bot.sqlite3
 LOG_LEVEL=INFO
+
+# Local Postgres via docker-compose:
+DATABASE_URL=POSTGRES_DB_HERE
